2017-06-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dataframe.m: Guess the size when the first input is empty

	* arrays/@stk_dataframe/stk_dataframe.m: Deduce the number of
	columns and rows from the length of colnames and rownames,
	respectively, when the first input argument is empty.  Note that
	this patch changes the object generated by the default constructor.

2017-06-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv.m: Accept @stkçdataframe inputs

	* misc/pareto/stk_dominatedhv.m: Tolerate any kind of input
	argument that can be converted to a double precision matrix, in
	particular @stk_dataframe objects.

2017-06-16  Julien Bect  <julien.bect@centralesupelec.fr>

	Don't use ~ to ignore output arguments (see CG#07)

	* admin/CODING_GUIDELINES: Improve CG#07
	* sampling/stk_sampcrit_akg_eval.m: Apply CG#07
	* sampling/stk_sampling_nesteddesign.m: Apply CG#07
	* sampling/stk_sampling_nestedlhs.m: Apply CG#07

	@stk_sampcrit_eqi/disp.m: Fix display bug

	* sampling/@stk_sampcrit_eqi/disp.m: Fix display bug for the case
	where point_batch_size is a function handle.

	stk_sampcrit_eqi.m: Increase unit test tolerance (ticket #76)

	* sampling/@stk_sampcrit_eqi/stk_sampcrit_eqi.m: Increase the
	numerical tolerance in two unit tests.

	stk_sampcrit_eqi.m: Fix one unit test (ticket #76)

	* sampling/@stk_sampcrit_eqi/stk_sampcrit_eqi.m: Fix one unit
	test; in Octave, str2func fails on phony function names.

2017-06-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampcrit_akg_eval.m: Improve numerical robustness

	* sampling/stk_sampcrit_akg_eval.m: Mitigate the effect of small
	inaccurate covariance values on the computation of the slopes.

	halfpintl.m: Fix a bug affecting slope equality cases

	* sampling/private/halfpintl.m: Fix a bug affecting slope equality
	cases.

	stk_plot_shadedci.m: Use area when fill fails (ticket #75)

	* misc/plot/stk_plot_shadedci.m: fill does not accept a axis